--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.colorTheme": "Community Material Theme High Contrast"
+    "workbench.colorTheme": "Community Material Theme High Contrast",
+    "css.lint.unknownAtRules": "ignore"
 }
