--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0"
-  }
+    "nodemon": "^3.1.0",
+    "dotenv": "^16.4.5"
+
+  },
+  "runArgs": ["--env-file", ".devcontainer.env"]
 }
